// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table program{
  program_id int [primary key]
  title varchar 
  description text
  image_url text [note: "url of image uploaded to s3 bucket" ]
  created_at timestamp
}

Table volunteer{
  first_name varchar
  last_name varchar
  email email [primary key]
  occupation varchar
  phone_number varchar
  id_pass_no varchar [note: "id/ passport no"]
  start_date date
  end_date date 
  date_of_birth date 
  residence varchar 
  emergency_contact_name varchar
  emergency_contact_phone varchar 
  emergency_contact_email email 
  statement_of_intent_url varchar 
  program_id int [ref: > program.program_id]

}

Table event {
  event_id int [primary key]
  title varchar
  description varchar 
  event_date date 
  location varchar 
  created_at timestamp
  program_id int [ref: > program.program_id]
}

Table news {
  news_id int [primary key]
  description text 
  image_url varchar 
  published_at timestamp
  updated_at timestamp
  event_id int [ref: > event.event_id]
  program_id int [ref: >program.program_id]

}

Table resources {
  resources_id int [primary key]
  title varchar 
  file_url varchar 
  image_url varchar 
  created_at timestamp
  updated_at timestamp
  program_id int [ref: > program.program_id]
  event_id int [ref: > event.event_id]
}

Table employees {
  first_name varchar
  last_name varchar
  email email [primary key]
  role varchar
  phone varchar
  id_pass_no varchar [note: "id/ passport no"]
  start_date date
  date_of_birth date 
  residence varchar 
  emergency_contact_name varchar
  emergency_contact_phone varchar 
  emergency_contact_email email 
  bio text 
}

Table patners {
  patner_id int [primary key]
  name_org varchar
  description text
  image_url varchar 
  website_url varchar 
  assigned_member_email email [ref: > employees.email]
  program_id int [ref :> program.program_id]
}

Table gallery {
  image_id int [primary key]
  title varchar 
  description text
  created_at timestamp 
  program_id int [ref: > program.program_id]
  event_id int [ref:> event.event_id]
}

Table donations {
  donations_id varchar [primary key]
  merchant_reference_id varchar 
  pesapal_trasaction_id varchar 
  amount decimal
  currency varchar
  donation_reason varchar 
  payment_status varchar 
  payment_method varchar 
  donor_email email 
  donor_phone varchar 
  created_at timestamp
  updated_at timestamp 
}

Table feedback {
  feedback_id int [primary key]
  first_name varchar 
  last_name varchar 
  email email 
  subject varchar 
  message text 
  created_at timestamp
}